Make sure proper text color is shown when in user-selected dark mode.

--- a/src/renderer/styles.scss
+++ b/src/renderer/styles.scss
@@ -10,9 +10,10 @@
 
 :root {
     --padding-base: 15px;
-
     --width-detail: 360px;
+}
 
+#app {
     color: var(--color-text-primary);
     font: {
         family: "Rubik";
